--- a/dubbo-deep-cache/cache-provider/pom.xml
+++ b/dubbo-deep-cache/cache-provider/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cache-provider</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.rainbow.learning</groupId>
+            <artifactId>cache-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
